--- a/resources/assets/sass/_header.scss
+++ b/resources/assets/sass/_header.scss
@@ -4,8 +4,79 @@ HEADER STYLING
 
  */
 
+header {
+
+  overflow-x: scroll;
+  overflow-y: hidden;
+
+  a, .navbar, .navbar-brand {
+    background-color: transparent;
+    border: none;
+    font-size: 22px;
+    font-weight: bold;
+    color: $nav_unselected;
+  }
+
+  .navbar {
+    min-width: 550px;
+
+  }
+
+  .navbar-inverse .navbar-nav > .active > a,
+  .navbar-inverse .navbar-nav > .active > a:hover,
+  .navbar-inverse .navbar-nav > .active > a:focus {
+    color: $nav_selected;
+    background-color: transparent;
+  }
+
+  .navbar-nav, .navbar-header {
+    float:left;
+    margin: 0;
+  }
+
+  .navbar li {
+    float: left;
+  }
+
+  .navbar li a {
+    padding-top: 15px;
+    padding-bottom: 15px;
+  }
+
+  .navbar-nav {
+    background-color: yellow;
+  }
+
+  .nav_profile_link {
+    background-size: cover;
+    margin: 10px 15px;
+  }
+}
+
+/* width */
+header::-webkit-scrollbar {
+  width: 20px;
+}
+
+/* Track */
+header::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+}
+
+/* Handle */
+header::-webkit-scrollbar-thumb {
+  background: red;
+  border-radius: 10px;
+}
 
 
+
+
+
+
+
+/*
 #header_wrapper {
   background-image: url("/img/header_bg_01_bw.jpg");
   background-size: cover;
@@ -88,3 +159,4 @@ li > a:active {
   color: $primary-color;
   font-size: 1.2em;
 }
+*/
