--- a/resources/assets/sass/_style.scss
+++ b/resources/assets/sass/_style.scss
@@ -1,12 +1,13 @@
-
-
-
 body {
   font-family: Metropolis, Arial, sans-serif;
   font-size: 14px;
   color: $black;
+  overflow: hidden;
 }
 
+
+
+/*
 .main_logo {
   display: block;
   width: 400px;
@@ -212,4 +213,4 @@ body {
   .content {
 
   }
-}
+}*/
